--- a/SETraining2/test-output/old/Default suite/methods-alphabetical.html
+++ b/SETraining2/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="68a769">  <td>19/10/04 11:42:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test1.setUp()[pri:0, instance:tPOM_tests.Test1@307f6b8c]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2092769598</td>   <td></td> </tr>
+<tr bgcolor="68a769">  <td>19/10/19 20:16:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;_9th_TestNg_Excel_read.afterMethod()[pri:0, instance:TestNG._9th_TestNg_Excel_read@36b4cef0]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="68a769">  <td>19/10/19 20:16:18</td>   <td>2121</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;_9th_TestNg_Excel_read.afterMethod()[pri:0, instance:TestNG._9th_TestNg_Excel_read@36b4cef0]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="68a769">  <td>19/10/19 20:16:20</td>   <td>4134</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;_9th_TestNg_Excel_read.afterMethod()[pri:0, instance:TestNG._9th_TestNg_Excel_read@36b4cef0]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="68a769">  <td>19/10/19 20:16:22</td>   <td>6379</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;_9th_TestNg_Excel_read.afterMethod()[pri:0, instance:TestNG._9th_TestNg_Excel_read@36b4cef0]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="68a769">  <td>19/10/19 20:16:14</td>   <td>-1998</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="_9th_TestNg_Excel_read.loginTest(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:TestNG._9th_TestNg_Excel_read@36b4cef0]">loginTest</td> 
+  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="68a769">  <td>19/10/19 20:16:16</td>   <td>136</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="_9th_TestNg_Excel_read.loginTest(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:TestNG._9th_TestNg_Excel_read@36b4cef0]">loginTest</td> 
+  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="68a769">  <td>19/10/19 20:16:18</td>   <td>2247</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="_9th_TestNg_Excel_read.loginTest(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:TestNG._9th_TestNg_Excel_read@36b4cef0]">loginTest</td> 
+  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="68a769">  <td>19/10/19 20:16:20</td>   <td>4226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="_9th_TestNg_Excel_read.loginTest(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:TestNG._9th_TestNg_Excel_read@36b4cef0]">loginTest</td> 
+  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="68a769">  <td>19/10/19 20:16:04</td>   <td>-11265</td> <td>&nbsp;</td><td title="&gt;&gt;_9th_TestNg_Excel_read.setUp()[pri:0, instance:TestNG._9th_TestNg_Excel_read@36b4cef0]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="68a769">  <td>19/10/19 20:16:22</td>   <td>6476</td> <td>&nbsp;</td><td title="&lt;&lt;_9th_TestNg_Excel_read.tearDown()[pri:0, instance:TestNG._9th_TestNg_Excel_read@36b4cef0]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
 </table>
