--- a/SETraining2/test-output/old/Login tests/classes.html
+++ b/SETraining2/test-output/old/Login tests/classes.html
@@ -4,27 +4,35 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>TestNG._99th_TestNg_XML_dataParsing</td>
+<td>tPOM_tests.Test1</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginTest</td>
+<td>testSuccessLogin</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>setUp</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>beforeMethod</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>afterMethod</td>
+<td>tearDown</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
