--- a/SETraining2/test-output/old/Login tests/methods-alphabetical.html
+++ b/SETraining2/test-output/old/Login tests/methods-alphabetical.html
@@ -1,28 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Login tests</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e2809c">  <td>19/10/04 11:56:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;_99th_TestNg_XML_dataParsing.afterMethod()[pri:0, instance:TestNG._99th_TestNg_XML_dataParsing@1a1d6a08]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="e2809c">  <td>19/10/04 11:56:49</td>   <td>18752</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;_99th_TestNg_XML_dataParsing.afterMethod()[pri:0, instance:TestNG._99th_TestNg_XML_dataParsing@12f41634]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="e2809c">  <td>19/10/04 11:57:03</td>   <td>33180</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;_99th_TestNg_XML_dataParsing.afterMethod()[pri:0, instance:TestNG._99th_TestNg_XML_dataParsing@1e7c7811]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="e2809c">  <td>19/10/04 11:56:24</td>   <td>-6097</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="_99th_TestNg_XML_dataParsing.loginTest(java.lang.String, java.lang.String)[pri:0, instance:TestNG._99th_TestNg_XML_dataParsing@1a1d6a08]">loginTest</td> 
-  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="e2809c">  <td>19/10/04 11:56:43</td>   <td>12452</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="_99th_TestNg_XML_dataParsing.loginTest(java.lang.String, java.lang.String)[pri:0, instance:TestNG._99th_TestNg_XML_dataParsing@12f41634]">loginTest</td> 
-  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="e2809c">  <td>19/10/04 11:57:01</td>   <td>31062</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="_99th_TestNg_XML_dataParsing.loginTest(java.lang.String, java.lang.String)[pri:0, instance:TestNG._99th_TestNg_XML_dataParsing@1e7c7811]">loginTest</td> 
-  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="e2809c">  <td>19/10/04 11:56:12</td>   <td>-18735</td> <td>&nbsp;</td><td title="&gt;&gt;_99th_TestNg_XML_dataParsing.setUp()[pri:0, instance:TestNG._99th_TestNg_XML_dataParsing@1a1d6a08]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="e2809c">  <td>19/10/04 11:56:31</td>   <td>640</td> <td>&nbsp;</td><td title="&gt;&gt;_99th_TestNg_XML_dataParsing.setUp()[pri:0, instance:TestNG._99th_TestNg_XML_dataParsing@12f41634]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="e2809c">  <td>19/10/04 11:56:50</td>   <td>19248</td> <td>&nbsp;</td><td title="&gt;&gt;_99th_TestNg_XML_dataParsing.setUp()[pri:0, instance:TestNG._99th_TestNg_XML_dataParsing@1e7c7811]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="e2809c">  <td>19/10/04 11:56:31</td>   <td>395</td> <td>&nbsp;</td><td title="&lt;&lt;_99th_TestNg_XML_dataParsing.tearDown()[pri:0, instance:TestNG._99th_TestNg_XML_dataParsing@1a1d6a08]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="e2809c">  <td>19/10/04 11:56:49</td>   <td>19105</td> <td>&nbsp;</td><td title="&lt;&lt;_99th_TestNg_XML_dataParsing.tearDown()[pri:0, instance:TestNG._99th_TestNg_XML_dataParsing@12f41634]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1053631449</td>   <td></td> </tr>
-<tr bgcolor="e2809c">  <td>19/10/04 11:57:04</td>   <td>33552</td> <td>&nbsp;</td><td title="&lt;&lt;_99th_TestNg_XML_dataParsing.tearDown()[pri:0, instance:TestNG._99th_TestNg_XML_dataParsing@1e7c7811]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1053631449</td>   <td></td> </tr>
+<tr bgcolor="e2809c">  <td>19/10/19 20:26:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test1.beforeMethod()[pri:0, instance:tPOM_tests.Test1@6f195bc3]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1316061703</td>   <td></td> </tr>
+<tr bgcolor="e2809c">  <td>19/10/19 20:26:33</td>   <td>15532</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test1.beforeMethod()[pri:0, instance:tPOM_tests.Test1@5bfbf16f]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1316061703</td>   <td></td> </tr>
+<tr bgcolor="e2809c">  <td>19/10/19 20:26:48</td>   <td>30444</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test1.beforeMethod()[pri:0, instance:tPOM_tests.Test1@4923ab24]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1316061703</td>   <td></td> </tr>
+<tr bgcolor="e2809c">  <td>19/10/19 20:26:05</td>   <td>-11870</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test1.setUp()[pri:0, instance:tPOM_tests.Test1@6f195bc3]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1316061703</td>   <td></td> </tr>
+<tr bgcolor="e2809c">  <td>19/10/19 20:26:23</td>   <td>5846</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test1.setUp()[pri:0, instance:tPOM_tests.Test1@5bfbf16f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1316061703</td>   <td></td> </tr>
+<tr bgcolor="e2809c">  <td>19/10/19 20:26:38</td>   <td>20703</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test1.setUp()[pri:0, instance:tPOM_tests.Test1@4923ab24]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1316061703</td>   <td></td> </tr>
+<tr bgcolor="e2809c">  <td>19/10/19 20:26:22</td>   <td>4373</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Test1.tearDown(java.lang.reflect.Method)[pri:0, instance:tPOM_tests.Test1@6f195bc3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1316061703</td>   <td></td> </tr>
+<tr bgcolor="e2809c">  <td>19/10/19 20:26:37</td>   <td>19339</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Test1.tearDown(java.lang.reflect.Method)[pri:0, instance:tPOM_tests.Test1@5bfbf16f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1316061703</td>   <td></td> </tr>
+<tr bgcolor="e2809c">  <td>19/10/19 20:27:01</td>   <td>44193</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Test1.tearDown(java.lang.reflect.Method)[pri:0, instance:tPOM_tests.Test1@4923ab24]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1316061703</td>   <td></td> </tr>
+<tr bgcolor="e2809c">  <td>19/10/19 20:26:19</td>   <td>2151</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.testSuccessLogin(java.lang.String, java.lang.String)[pri:0, instance:tPOM_tests.Test1@6f195bc3]">testSuccessLogin</td> 
+  <td>main@1316061703</td>   <td></td> </tr>
+<tr bgcolor="e2809c">  <td>19/10/19 20:26:35</td>   <td>17666</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.testSuccessLogin(java.lang.String, java.lang.String)[pri:0, instance:tPOM_tests.Test1@5bfbf16f]">testSuccessLogin</td> 
+  <td>main@1316061703</td>   <td></td> </tr>
+<tr bgcolor="e2809c">  <td>19/10/19 20:26:50</td>   <td>32557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.testSuccessLogin(java.lang.String, java.lang.String)[pri:0, instance:tPOM_tests.Test1@4923ab24]">testSuccessLogin</td> 
+  <td>main@1316061703</td>   <td></td> </tr>
 </table>
